[tool.poetry]
name = "sprint4"
version = "0.1.0"
description = "Short-Link Server Counter"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
dynaconf = "^3.2.5"
click = "^8.1.7"
asyncpg = "^0.29.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
black = "^24.4.2"
mypy = "^1.10.0"
ruff = "^0.4.8"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-random-order = "^1.1.1"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
